infratf/security_groups.tf
resource "aws_security_group" "ec2_sg" {
  name        = "face-sg"
  description = "Permitir acceso SSH y HTTP/Flask"
  vpc_id      = aws_vpc.face_vpc.id

  ingress {
    description = "Permitir SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Permitir HTTP (Flask por defecto)"
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all egress traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "face-sg"
  }
}
